# baseline_project

./: .pre-commit-config.yaml  pyproject.toml
baseline_project/: main.py
tests/: test_main.py
