[tool.poetry]
name = "baseline_project"
version = "0.1.0"
description = ""
authors = ["sudomaze <mazen.ota@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
black = "^22.3.0"
mypy = "^0.950"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
pycln = "^1.3.2"
isort = "^5.10.1"
pre-commit-hooks = "^4.2.0"

[tool.mypy]
files = ["baseline_project"]
show_error_codes = true
pretty = true

[tool.pytest]
# log_cli = true
addopts = [
    # show summary of all tests that did not pass
    "-ra",
    # idk
    "-s",
    # Make tracebacks shorter
    "--tb=native",
    # enable all warnings
    "-Wd",
]
testpaths = ["test"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
